# exchange

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/scripts/db/: admin.py  data.py
backend/src/: config.py
backend/src/api/dependencies/: crypto.py  currency.py  db.py  phone_number.py  user.py
backend/src/api/metadata/: email.py
backend/src/api/utils/: conn_manager.py  dependency_factory.py  ws_manager.py
backend/src/bot/utils/: button.py  (+3 more)
backend/src/clients/: __init__.py  crypto.py  currency.py  oauth2.py
backend/src/constants/: __init__.py  crypto.py  currency.py  oauth2.py
backend/src/databases/: __init__.py  mysql_manager.py  redis_manager.py
backend/src/enums/: crypto.py  currency.py  user.py  validation.py
backend/src/models/: __init__.py  base.py  crypto.py  crypto_subscribe.py  currency.py  currency_subscribe.py  telegram_user.py  user.py
backend/src/repositories/: __init__.py  crypto.py  crypto_subscribe.py  currency.py  currency_subscribe.py  telegram_user.py  user.py
backend/src/schemas/: __init__.py  exceptions.py  schemas.py
backend/src/services/: __init__.py  crypto.py  currency.py  email.py  phone_number.py  telegram_authorize.py  user.py
backend/src/types/: dependency_factory.py  validation_factory.py
backend/src/utils/: client.py  code.py  db_manager.py  decimal.py  email.py  exception_schema.py  jwt.py  logger.py  oauth2.py  password.py  repository.py  sa_manager.py  schema.py  service.py  validation.py
migrations/: env.py
migrations/versions/: 29dd0d429914_feat_db_base_cryptosubscribe_crypto_.py
(+15 files in other folders)
