[project]
name = "exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "aiomysql>=0.2.0",
    "alembic>=1.16.4",
    "asgi-lifespan>=2.1.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "fastapi-mail>=1.5.0",
    "jinja2>=3.1.6",
    "phonenumbers>=9.0.12",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (PEP 8 style issues like spacing, indentation)
    "F",  # pyflakes (undefined variables, unused imports, etc.)
    "B",  # flake8-bugbear (likely bugs, dangerous patterns)
    "W",  # pycodestyle warnings (minor style warnings)
    "C",  # mccabe (complexity checker — too complex functions)
    "N",  # pep8-naming (enforces correct naming conventions)
    "A",  # flake8-builtins (avoid shadowing Python built-ins like `list`, `id`, etc.)
    "PT", # pytest-style – checks specific to pytest
    "I"  # isort – import sorting
]
ignore = ["E501"] # ignore line-too-long, if you want
